--- a/dev-portfolio/public/index.html
+++ b/dev-portfolio/public/index.html
@@ -7,11 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Trenton Morrell - Software Engineer portfolio showcasing full-stack development expertise"
+      content="Trent Morrell - Software Engineer portfolio"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Trenton Morrell | Software Engineer</title> <!-- Changed from "React App" -->
+    <title>Trent Morrell | Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
